--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ default = []
 [dependencies]
 solana-sdk = "=1.8.1"
 regex = "0.1.41"
+serde_json ="1.0.68"
 
 [dependencies.bs58]
 version = "0.4.0"
